Add versionfilter to helm resource
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/helmchart.yaml
+++ b/e2e/updatecli.d/success.d/helmchart.yaml
@@ -28,6 +28,9 @@ sources:
     spec:
       url: index.yaml
       name: epinio
+      versionfilter:
+        kind: semver
+        pattern: "~0"
 
   fromFileURI:
     name: Retrieve Version from file URI hosted on a git repository
