Add oci e2e tests
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/helmchart.yaml
+++ b/e2e/updatecli.d/success.d/helmchart.yaml
@@ -47,6 +47,13 @@ sources:
     spec:
       name: epinio
 
+  fromOCI:
+    name: Get upgrade-responder
+    kind: helmchart
+    spec:
+      url: oci://ghcr.io/olblak/charts/
+      name: upgrade-responder
+
 conditions:
   default1:
     name: Retrieve Version v1
@@ -75,6 +82,15 @@ conditions:
       url: index.yaml
       name: epinio
       version: 1.0.0
+
+  fromOCI:
+    name: Get upgrade-responder
+    kind: helmchart
+    disablesourceinput: true
+    spec:
+      url: oci://ghcr.io/olblak/charts/
+      name: upgrade-responder
+      version: v0.1.5
 
 targets:
   default:
