--- a/e2e/updatecli.d/success.d/helmchart.yaml
+++ b/e2e/updatecli.d/success.d/helmchart.yaml
@@ -47,12 +47,13 @@ sources:
     spec:
       name: epinio
 
-  fromOCI:
-    name: Get upgrade-responder
-    kind: helmchart
-    spec:
-      url: oci://ghcr.io/olblak/charts/
-      name: upgrade-responder
+# Github Action is not configured yet to query oci registry
+#  fromOCI:
+#    name: Get upgrade-responder
+#    kind: helmchart
+#    spec:
+#      url: oci://ghcr.io/olblak/charts/
+#      name: upgrade-responder
 
 conditions:
   default1:
@@ -83,14 +84,15 @@ conditions:
       name: epinio
       version: 1.0.0
 
-  fromOCI:
-    name: Get upgrade-responder
-    kind: helmchart
-    disablesourceinput: true
-    spec:
-      url: oci://ghcr.io/olblak/charts/
-      name: upgrade-responder
-      version: v0.1.5
+# # Github Action is not configured yet to query oci registry
+#  fromOCI:
+#    name: Get upgrade-responder
+#    kind: helmchart
+#    disablesourceinput: true
+#    spec:
+#      url: oci://ghcr.io/olblak/charts/
+#      name: upgrade-responder
+#      version: v0.1.5
 
 targets:
   default:
