Add e2e test case
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/gitea/tag.yaml
+++ b/e2e/updatecli.d/success.d/gitea/tag.yaml
@@ -32,7 +32,8 @@ conditions:
       url: "try.gitea.io"
       owner: "olblak"
       repository: "updatecli-test"
-      tag: "0.0.2"
+      tag: "99.0.2"
+    failwhen: true
   sourcedefault:
     kind: "gitea/tag"
     sourceid: "default"
