--- a/pkg/plugins/autodiscovery/dockercompose/test/testdata/docker-compose.yaml
+++ b/pkg/plugins/autodiscovery/dockercompose/test/testdata/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     platform: linux/amd64
     ports:
       - "8080:8080"
-  jenkins-lts:
-    image: jenkinsci/jenkins:2.150.1-alpine
-    ports:
-      - "8080:8080"
+  #jenkins-lts:
+  #  image: jenkinsci/jenkins:2.150.1-alpine
+  #  ports:
+  #    - "8080:8080"
