--- a/e2e/updatecli.d/success.d/gitea/tag.yaml
+++ b/e2e/updatecli.d/success.d/gitea/tag.yaml
@@ -4,47 +4,47 @@ sources:
   default:
     kind: "gitea/tag"
     spec:
-      url: "try.gitea.io"
-      owner: "olblak"
-      repository: "updatecli-test"
+      url: "codeberg.org"
+      owner: "updatecli"
+      repository: "updatecli-action"
       versionfilter:
         kind: "semver"
-        pattern: "~0.0"
+        pattern: "~2"
   latest:
     kind: "gitea/tag"
     spec:
-      url: "try.gitea.io"
-      owner: "olblak"
-      repository: "updatecli-test"
+      url: "codeberg.org"
+      owner: "updatecli"
+      repository: "updatecli-action"
 
   mirror:
     kind: "gitea/tag"
     spec:
-      url: "try.gitea.io"
-      owner: "olblak"
-      repository: "updatecli-mirror"
+      url: "codeberg.org"
+      owner: "updatecli"
+      repository: "updatecli-action"
         
 conditions:
   default:
     kind: "gitea/tag"
     disablesourceinput: true
     spec:
-      url: "try.gitea.io"
-      owner: "olblak"
-      repository: "updatecli-test"
-      tag: "99.0.2"
+      url: "codeberg.org"
+      owner: "updatecli"
+      repository: "updatecli-action"
+      tag: "v2.15.0"
     failwhen: true
   sourcedefault:
     kind: "gitea/tag"
     sourceid: "default"
     spec:
-      url: "try.gitea.io"
-      owner: "olblak"
-      repository: "updatecli-test"
+      url: "codeberg.org"
+      owner: "updatecli"
+      repository: "updatecli-action"
   latest:
     kind: "gitea/tag"
     sourceid: "latest"
     spec:
-      url: "try.gitea.io"
-      owner: "olblak"
-      repository: "updatecli-test"
+      url: "codeberg.org"
+      owner: "updatecli"
+      repository: "updatecli-action"
