--- a/e2e/updatecli.d/success.d/json.yaml
+++ b/e2e/updatecli.d/success.d/json.yaml
@@ -13,15 +13,15 @@ sources:
     spec:
       file: https://www.updatecli.io/schema/latest/config.json
       key: $id
-  semverVersion:
-    kind: json
-    name: Get latest version
-    spec:
-      file: https://api.github.com/repos/updatecli/updatecli/releases
-      query: ".[*].tag_name"
-      versionfilter:
-        kind: semver
-        pattern: "v0.35"
+#  semverVersion:
+#    kind: json
+#    name: Get latest version
+#    spec:
+#      file: https://api.github.com/repos/updatecli/updatecli/releases
+#      query: ".[*].tag_name"
+#      versionfilter:
+#        kind: semver
+#        pattern: "v0.35"
 
 conditions:
   local:
@@ -41,14 +41,15 @@ conditions:
       file: https://www.updatecli.io/schema/latest/config.json
       key: $schema
       value: http://json-schema.org/draft-04/schema
-  http-query:
-    kind: json
-    name: Get latest version
-    disablesourceinput: true
-    spec:
-      file: https://api.github.com/repos/updatecli/updatecli/releases
-      query: ".(tag_name=v0.36.1).tag_name"
-      value: "v0.36.1"
+ 
+# http-query:
+#    kind: json
+#    name: Get latest version
+#    disablesourceinput: true
+#    spec:
+#      file: https://api.github.com/repos/updatecli/updatecli/releases
+#      query: ".(tag_name=v0.36.1).tag_name"
+#      value: "v0.36.1"
 
 targets:
   local:
