Increase golangci-lint timeout for windows
Signed-off-by: Olblak <me@olblak.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -114,7 +114,8 @@ issues:
         - gocritic
       text: "unnecessaryDefer:"
 run:
-  timeout: 5m
+  # Increase timeout for windows
+  timeout: 10m
   skip-dirs:
     - test/testdata_etc
     - internal/cache
