--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -20,6 +20,7 @@ jobs:
         os: [ubuntu-20.04, windows-latest, macos-latest]
 
     steps:
+
       # https://github.com/actions/setup-go
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -28,6 +29,13 @@ jobs:
         id: go
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
+
+      # fix issues on windows with line endings with a matrix build
+      - if: runner.os == 'windows-latest'
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
