--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -93,7 +93,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubunu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
 
