--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -88,7 +88,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-os:
-    name: Multi OS Build
+    name: Multi OS Test
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -107,15 +107,21 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
-      # fix issues on windows with line endings with a matrix build
-      - if: runner.os == 'windows-latest'
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-
       - name: Quick Test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make test-short
         if: ${{ github.event_name == 'pull_request' }}
 
+      - name: All Test
+        env:
+          # Access only to ec2 AMI api in read-only
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          UPDATECLI_GITEA_TOKEN: ${{ secrets.UPDATECLI_GITEA_TOKEN }}
+        run: make test
+        if: ${{ github.event_name == 'schedule' }}
