--- a/e2e/updatecli.d/success.d/shell/workDir.yaml
+++ b/e2e/updatecli.d/success.d/shell/workDir.yaml
@@ -1,5 +1,11 @@
 name: shell workdir e2e tests
 
+scms:
+  updatecli:
+    kind: git
+    spec:
+      url: https://github.com/updatecli/updatecli-action.git
+
 sources:
   relative:
     name: Test that pwd return the correct path
@@ -7,6 +13,13 @@ sources:
     spec:
       command: pwd
       workdir: e2e/updatecli.d/success.d/shell
+  relativefromscm:
+    name: Test that pwd return the correct path from scm
+    scmid: updatecli
+    kind: shell
+    spec:
+      command: pwd
+      workdir: .github
 conditions:
   relative:
     name: Test that pwd return the correct path
@@ -15,6 +28,14 @@ conditions:
     spec:
       command: pwd
       workdir: e2e/updatecli.d/success.d/shell
+  relativefromscm:
+    name: Test that pwd return the correct path from scm
+    disablesourceinput: true
+    scmid: updatecli
+    kind: shell
+    spec:
+      command: pwd
+      workdir: .github
 targets:
   relative:
     name: Test that pwd return the correct path
@@ -23,3 +44,11 @@ targets:
     spec:
       command: pwd
       workdir: e2e/updatecli.d/success.d/shell
+  relativefromscm:
+    name: Test that pwd return the correct path from scm
+    disablesourceinput: true
+    scmid: updatecli
+    kind: shell
+    spec:
+      command: pwd
+      workdir: .github
