update example with a condition checking multiple files

--- a/examples/updatecli.generic/yaml-files.yaml
+++ b/examples/updatecli.generic/yaml-files.yaml
@@ -32,7 +32,9 @@ conditions:
     kind: yaml
     sourceID: default
     spec:
-      file: examples/values.yaml
+      files:
+      - examples/values.yaml
+      - examples/another-values.yaml
       key: "github.user"
   checkGithubRepositoryHasSpecifiedValue:
     kind: yaml
