feat: make gitbranch accept a key argument

--- a/e2e/updatecli.d/success.d/gitBranch.yaml
+++ b/e2e/updatecli.d/success.d/gitBranch.yaml
@@ -26,6 +26,12 @@ sources:
     kind: gitbranch
     spec:
       url: https://github.com/olblak/nocode.git
+  hash:
+    name: Get Latest committed branch
+    kind: gitbranch
+    scmid: default
+    spec:
+      key: hash
 
 conditions:
   default:
