feat: make comment compatible with renovate bot

--- a/pkg/plugins/autodiscovery/githubaction/testdata/digest/.github/workflows/updatecli.yaml
+++ b/pkg/plugins/autodiscovery/githubaction/testdata/digest/.github/workflows/updatecli.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v4"
       - name: "Checkout"
-        uses: "actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683"  # pinned from v4.2.2 by updatecli (do-not-remove-comment)
+        uses: "actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683"  # v4.2.2
