fix(githubaction): correctly ignore relative path action

--- a/pkg/plugins/autodiscovery/githubaction/testdata/updatecli/.github/workflows/updatecli.yaml
+++ b/pkg/plugins/autodiscovery/githubaction/testdata/updatecli/.github/workflows/updatecli.yaml
@@ -22,8 +22,10 @@ jobs:
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v4"
-    #  - name: "Setup updatecli"
-    #    uses: "updatecli/updatecli-action@v2"
+
+      - name: "Setup updatecli"
+        uses: "./"
+
     #  - name: Set up Go
     #    uses: actions/setup-go@v5
     #    with:
