--- a/e2e/updatecli.d/success.d/autodiscovery/golang/minorOnly.yaml
+++ b/e2e/updatecli.d/success.d/autodiscovery/golang/minorOnly.yaml
@@ -25,11 +25,18 @@ autodiscovery:
       versionfilter:
         kind: semver
         pattern: minor
-      ignore:
-        # Ignoring the following modules as they do not publish release
+      only:
         - modules:
-            github.com/ProtonMail/go-crypto:
-            github.com/shurcooL/githubv4:
-            github.com/nirasan/go-oauth-pkce-code-verifier:
-            github.com/skratchdot/open-golang:
+            github.com/Masterminds/semver/v3: ""
+            github.com/go-git/go-git/v5: ""
+            cuelang.org/go: ""
+      #ignore:
+      #  # Ignoring the following modules as they do not publish release
+      #  - modules:
+      #      github.com/ProtonMail/go-crypto:
+      #      github.com/shurcooL/githubv4:
+      #      github.com/nirasan/go-oauth-pkce-code-verifier:
+      #      github.com/skratchdot/open-golang:
+
+
 
