chore: add missing e2e test

--- a/e2e/updatecli.d/success.d/autodiscovery/golang/golangOnly.2.yaml
+++ b/e2e/updatecli.d/success.d/autodiscovery/golang/golangOnly.2.yaml
@@ -22,7 +22,7 @@ autodiscovery:
   actionid:  default
   crawlers:
     golang/gomod:
-      goversiononly: true
+      onlygoversion: true
       versionfilter:
         kind: semver
         pattern: minor
