feat(golang/autodiscovery): make it easier to restrict to go module orr go version update (#4427)
* feat(golang/autodiscovery): make it easier to restrict to go module or go version update

* chore: add missing e2e test

* chore: reduce golang autodiscovery e2e tests

--- a/e2e/updatecli.d/success.d/autodiscovery/golang/golangOnly.2.yaml
+++ b/e2e/updatecli.d/success.d/autodiscovery/golang/golangOnly.2.yaml
@@ -22,10 +22,10 @@ autodiscovery:
   actionid:  default
   crawlers:
     golang/gomod:
+      onlygoversion: true
       versionfilter:
         kind: semver
         pattern: minor
       only:
-        - goversion: "*"
-          path: go.mod
+        - path: go.mod
 
