deps: automerge golang patch update version

--- a/updatecli/values.d/golang_patch.yaml
+++ b/updatecli/values.d/golang_patch.yaml
@@ -1,6 +1,7 @@
 name: "deps: bump patch version for Golang module"
 pipelineid: "golang/gomod/patch"
 groupby: individual
+automerge: true
 
 spec:
   versionfilter:
