--- a/pkg/plugins/autodiscovery/githubaction/testdata/digest/.github/workflows/updatecli.yaml
+++ b/pkg/plugins/autodiscovery/githubaction/testdata/digest/.github/workflows/updatecli.yaml
@@ -23,4 +23,6 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v4"
       - name: "Checkout"
-        uses: "actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683"  # v4.2.2
+        uses: "actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683" # v4.2.2
+      - name: "Checkout"
+        uses: "actions/checkout@main"
