--- a/e2e/updatecli.d/success.d/autodiscovery/github/action/updatecli.yaml
+++ b/e2e/updatecli.d/success.d/autodiscovery/github/action/updatecli.yaml
@@ -7,7 +7,7 @@ scms:
       repository: updatecli
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-      branch: e2e-tests-golang
+      branch: main
 
 actions:
   default:
