fix: docker image license

--- a/docker/Dockerfile.full
+++ b/docker/Dockerfile.full
@@ -19,7 +19,7 @@ LABEL maintainer="Olivier Vernin <me@olblak.com>, Damien DUPORTAL <damien.duport
 LABEL org.opencontainers.image.authors="Olivier Vernin<me@olblak.com>, Damien DUPORTAL <damien.duportal@gmail.com>"
 LABEL org.opencontainers.image.url="https://github.com/updatecli/updatecli/pkgs/container/updatecli"
 LABEL org.opencontainers.image.documentation="https://www.updatecli.io/docs/prologue/introduction/"
-LABEL org.opencontainers.image.licenses="MIT"
+LABEL org.opencontainers.image.licenses="Apache-2.0"
 LABEL org.opencontainers.image.title="Updatecli"
 LABEL org.opencontainers.image.description="The gitops automation engine"
 LABEL org.opencontainers.image.base.name="ghcr.io/updatecli/updatecli"
