feat: allow to override working branch name

--- a/updatecli/updatecli.d/venom.yaml
+++ b/updatecli/updatecli.d/venom.yaml
@@ -21,6 +21,8 @@ scms:
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       user: "{{ .scm.user }}"
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
+      workingbranchprefix: "deps"
+      workingbranchseparator: '/'
     disabled: false
 sources:
   latestVersion:
@@ -33,6 +35,7 @@ sources:
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
       versionfilter:
         kind: semver
+        pattern: "<1"
 targets:
   goWorkflow:
     name: 'ci: update Venom version to {{ source "latestVersion" }}'
